--- a/yili/project/index.html
+++ b/yili/project/index.html
@@ -72,6 +72,10 @@
         </div>
         <h4 class="mt-4">营收近800亿元 净利润64.52亿元 伊利亮眼报强势领跑亚洲乳业 强大 "洋流效应" 助推企业驶向大健康蓝海</h4>
         <span class="wz1">2019-02-27</span>
+        <a href="https://im.qq.com/" target="_blank"><img src="../img/index/qq.png"/></a>
+        <a href="https://weixin.qq.com/" target="_blank"><img src="../img/index/weixin.png"/></a>
+        <a href="https://www.sina.com.cn/" target="_blank"><img src="../img/index/sina.png"/></a>
+        <a href="javascript:;" class="d-block mt-lg-3"><img src="../img/index/sy-news-icon02.png"/></a>
     </div>
 </div>
 <!-- 参观-->
@@ -85,7 +89,7 @@
             联系电话：0471-3357288/7388/7001<br/>
             扫描下方二维码关注《参观伊利》微信公众号进行网上预约</p>
         <a href="JavaScript:;"><img src="../img/index/kfgc-icon.png"/></a>
-        <img class="ewm pt-5" src="../img/index/erweima.jpg"/>
+        <img class="ewm" src="../img/index/erweima.jpg"/>
     </div>
 </div>
 <!-- 精彩合作-->
