--- a/yili/project/header.html
+++ b/yili/project/header.html
@@ -9,12 +9,14 @@
     <script src="../js/bootstrap.min.js"></script>.
     <link rel="stylesheet" href="../css/h_and_f.css"/>
     <title></title>
+    <script src="../js/jquery-1.11.3.js"></script>
 </head>
 <body>
+<a></a>
 <!-- 头部-->
 <div class="header row m-0 p-0">
     <!-- 头左-->
-    <div class="header_left d-flex p-0 col-md-8 col-sm-12">
+    <div class="header_left p-0 col-md-8 col-sm-12">
         <div class="navbar p-0 navbar-expand-md navbar-dark">
             <img class="navbar-brand" src="../img/h_and_f/logo.png"/>
             <button data-toggle="collapse" data-target="#content" class="navbar-toggler">
@@ -23,10 +25,10 @@
             <div class="collapse navbar-collapse" id="content">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="JavaScript:;">首页</a>
+                        <a class="nav-link" href="index.html">首页</a>
                     </li>
                     <li class="nav-item" id="basic_1">
-                        <a class="nav-link" href="JavaScript:;">关于我们</a>
+                        <a class="nav-link" href="gywm.html">关于我们</a>
                         <!-- 二级导航-->
                         <div class="subnav">
                             <ul class="nav ul_1">
@@ -46,7 +48,7 @@
                         </div>
                     </li>
                     <li class="nav-item" id="basic_2">
-                        <a class="nav-link" href="JavaScript:;">新闻中心</a>
+                        <a class="nav-link" href="news.html">新闻中心</a>
                         <!-- 二级导航-->
                         <div class="subnav">
                             <ul class="nav ul_2">
@@ -151,13 +153,23 @@
             </li>
             <li class="nav-item col-4 p-0">
                 <div class="h_search">
-                    <div class="h_search_avtive">
+                    <div id="h_search_avtive">
                         <input class="qsrnr" type="search" placeholder="请输入搜索的内容"/>
                     </div>
                 </div>
             </li>
         </ul>
     </div>
+</div>
+<div class="xuanfu">
+    <span>
+        <div class="h_side">
+            <a href="https://weixin.qq.com/" title="分享到微信" target="_blank"></a>
+            <a href="https://im.qq.com/" title="分享到qq" target="_blank"></a>
+            <a href="https://www.sina.com.cn/" title="分享到新浪微博" target="_blank"></a>
+        </div>
+    </span>
+    <a href="#"></a>
 </div>
 <script src="../js/h_and_f.js"></script>
 </body>
